unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Authorizing_User_Id__c.field-meta.xml
<CustomField>
    <fullName>conference360__Authorizing_User_Id__c</fullName>
    <inlineHelpText>The Id of the user who authorized the app</inlineHelpText>
    <label>Authorizing User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>