unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Data_Sync_Max_Attempts__c.field-meta.xml
<CustomField>
    <fullName>conference360__Data_Sync_Max_Attempts__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>Maximum number of retries for cache refresh in case of failure.</inlineHelpText>
    <label>Data Sync Max Reattempts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>