unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Disable_Attendee_Contact_Lead_Mapping__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_Attendee_Contact_Lead_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Don&#39;t add additional fields from Attendee to the related Contact or Lead record. Name, Salutation, and email will still be added.
**Current fields included in this custom setting: Phone, Title</description>
    <inlineHelpText>Don&#39;t add additional fields from Attendee to the related Contact or Lead record. Name, Salutation, and email will still be added.
**Current fields included in this custom setting: Phone, Title</inlineHelpText>
    <label>Disable Attendee/Contact/Lead fields</label>
    <type>Checkbox</type>
</CustomField>