unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Disable_Blackthorn_Email_Job__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_Blackthorn_Email_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to disable the automatic emails that are sent to attendee based on the event configuration.</inlineHelpText>
    <label>Disable Blackthorn Email Job</label>
    <type>Checkbox</type>
</CustomField>