unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Disable_Blackthorn_Webinar_Job__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_Blackthorn_Webinar_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to disable the job that adds attendee automatically to the webinar.</inlineHelpText>
    <label>Disable Blackthorn Webinar Job</label>
    <type>Checkbox</type>
</CustomField>