unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Disable_CampaignMember_CreateAttendee__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_CampaignMember_CreateAttendee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Campaign Member Create Attendee</label>
    <type>Checkbox</type>
</CustomField>