unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Disable_Image_URL_Validation__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_Image_URL_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Image URL Validation</label>
    <type>Checkbox</type>
</CustomField>