unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Disable_Parent_Duplicate_Logic__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_Parent_Duplicate_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Parent Duplicate Logic</label>
    <type>Checkbox</type>
</CustomField>