unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Disable_Price_Tag__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_Price_Tag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Hides the price tag for events on Event listing and Calendar Views.</inlineHelpText>
    <label>Disable Price Tag</label>
    <type>Checkbox</type>
</CustomField>