unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Disable_Simple_UI_Validation__c.field-meta.xml
<CustomField>
    <fullName>conference360__Disable_Simple_UI_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Simple UI Validation</label>
    <type>Checkbox</type>
</CustomField>