unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Enable_Accessibility__c.field-meta.xml
<CustomField>
    <fullName>conference360__Enable_Accessibility__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable accessibility for an Org.</inlineHelpText>
    <label>Enable Accessibility (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>