unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Enable_Batching_Event_Registration__c.field-meta.xml
<CustomField>
    <fullName>conference360__Enable_Batching_Event_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This when checked uses batch processing for event registration.</inlineHelpText>
    <label>Enable ERS Batch(Deprecated)</label>
    <type>Checkbox</type>
</CustomField>