unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Enable_Currency_Required_Validation__c.field-meta.xml
<CustomField>
    <fullName>conference360__Enable_Currency_Required_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box make Event Currency a required field  .</inlineHelpText>
    <label>Enable Currency Required Validation</label>
    <type>Checkbox</type>
</CustomField>