unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Enable_Split_Donation_Payments__c.field-meta.xml
<CustomField>
    <fullName>conference360__Enable_Split_Donation_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This setting enables the separation of donations in Events, to be funnelled into their own separate gateway account.</description>
    <inlineHelpText>Enable this setting to configure a second gateway account for the purpose of splitting and funnelling any donations collected during an Event registration.</inlineHelpText>
    <label>Enable Split Donation Payments</label>
    <type>Checkbox</type>
</CustomField>