unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Enable_Static_IP__c.field-meta.xml
<CustomField>
    <fullName>conference360__Enable_Static_IP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Static IP</label>
    <type>Checkbox</type>
</CustomField>