unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Express_Reg_For_Experience_Site__c.field-meta.xml
<CustomField>
    <fullName>conference360__Express_Reg_For_Experience_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In your Experience Cloud site(s), allow authenticated users to select contacts within their own account to pre-fill registration data.</description>
    <inlineHelpText>In your Experience Cloud site(s), allow authenticated users to select contacts within their own account to pre-fill registration data.</inlineHelpText>
    <label>Express Reg. for Experience Site</label>
    <type>Checkbox</type>
</CustomField>