unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Favicon_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Favicon_URL__c</fullName>
    <inlineHelpText>The default favicon url to be used for events.</inlineHelpText>
    <label>Favicon URL</label>
    <type>Url</type>
</CustomField>