unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__OAuth_Completed__c.field-meta.xml
<CustomField>
    <fullName>conference360__OAuth_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OAuth Completed</label>
    <type>Checkbox</type>
</CustomField>