unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Process_Attendee_Matching_Async__c.field-meta.xml
<CustomField>
    <fullName>conference360__Process_Attendee_Matching_Async__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Runs the Attendee matching logic in background for ERS</inlineHelpText>
    <label>Process Attendee Match Async</label>
    <type>Checkbox</type>
</CustomField>