unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Proxy_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Proxy_URL__c</fullName>
    <label>Proxy URL</label>
    <type>Url</type>
</CustomField>