unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Recurring_Event_Active_Event_Validation__c.field-meta.xml
<CustomField>
    <fullName>conference360__Recurring_Event_Active_Event_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the Recurring Method is set, new events will not be created until the active events count is less than the count field.</description>
    <inlineHelpText>When the Recurring Method is set, new events will not be created until the active events count is less than the count field.</inlineHelpText>
    <label>Recurring Event Active Event Validation</label>
    <type>Checkbox</type>
</CustomField>