unpackaged/main/default/objects/conference360__Blackthorn_Events_Settings__c/fields/conference360__Rollup_Attendees_Immediately__c.field-meta.xml
<CustomField>
    <fullName>conference360__Rollup_Attendees_Immediately__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Rollup Attendees Immediately</label>
    <type>Checkbox</type>
</CustomField>